# plex-downloader

./: .gitignore  README.md  setup.cfg
plex_downloader/: cli.py  download.py  plex.py
