[metadata]
name = plex_downloader
version = 0.0.1
author = Anthony Lukach
author_email = anthonylukach@gmail.com
description = Plex Downloader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alukach/plex-downloader
project_urls =
    Bug Tracker = https://github.com/alukach/plex-downloader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    tqdm >=4.63.1
    plexapi >=4.10.1
    click >=8.0.0
    inquirer >=2.9.1

[options.entry_points]
console_scripts =
    plex-downloader = plex_downloader.cli:main